--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 **/.config/newsboat/cache.db.lock
 **/.config/newsboat/history.cmdline
 **/.config/newsboat/history.search
+**/.config/newsboat/queue
 **/.config/newsboat/urls
 **/.vim/.netrwhist
 **/.vim/swap
