--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,10 +39,10 @@ unbind "\$" # rename-session
 unbind ,    # rename-window
 unbind %    # split-window -h
 unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
-unbind [    # paste-buffer
-unbind ]    
+# unbind }    # swap-pane -D
+# unbind {    # swap-pane -U
+# unbind [    # paste-buffer
+# unbind ]    
 unbind "'"  # select-window
 unbind n    # next-window
 unbind p    # previous-window
@@ -96,7 +96,7 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
+bind \\ if-shell '[ #{pane_index} -eq 1 ]' \
      'swap-pane -s "!"' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
@@ -288,8 +288,8 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
 
 # Configure tmux-yank
-set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
-# set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
+# set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
+set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 # =====================================
 # ===        Renew environment      ===
@@ -316,6 +316,7 @@ set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 set -g @open-S 'https://www.google.com/search?q='
 
