adjust player-mpris-tail module and use workspaces module

--- a/polybar/.config/polybar/config-top.ini
+++ b/polybar/.config/polybar/config-top.ini
@@ -163,8 +163,9 @@ font-2 = "xos4 Terminus:size=12;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
+
 modules-left = menu title
-modules-center = bspwm
+modules-center = workspaces
 modules-right = window_switch keyboard alsa checknetwork date sysmenu
 
 ; The separator will be inserted between the output of each module
