--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -277,14 +277,19 @@ reverse-scroll = false
 ; Default: false
 fuzzy-match = true
 
-; ws-icon-[0-9]+ = label;icon
+; icon-[0-9]+ = label;icon
 ; Note that the label needs to correspond with the bspwm workspace name
-ws-icon-0 = code;♚
-ws-icon-1 = office;♛
-ws-icon-2 = graphics;♜
-ws-icon-3 = mail;♝
-ws-icon-4 = web;♞
-ws-icon-default = 
+icon-0=0;
+icon-1=1;
+icon-2=2;
+icon-3=3;
+icon-4=4;
+icon-5=5;
+icon-6=6;
+icon-7=7;
+icon-8=8;
+icon-9=9;
+;;icon-default = 
 
 ; Available tags:
 ;   <label-monitor>
@@ -559,16 +564,16 @@ label-unmounted = %mountpoint%: not mounted
 ; Default: false
 ;;fuzzy-match = true
 
-; ws-icon-[0-9]+ = label;icon
+; icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
-;;ws-icon-0 = 1;♚
-;;ws-icon-1 = 2;♛
-;;ws-icon-2 = 3;♜
-;;ws-icon-3 = 4;♝
-;;ws-icon-4 = 5;♞
-;;ws-icon-default = ♟
-; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
-; you must also define a ws-icon-5.
+;;icon-0 = 1;♚
+;;icon-1 = 2;♛
+;;icon-2 = 3;♜
+;;icon-3 = 4;♝
+;;icon-4 = 5;♞
+;;icon-default = ♟
+; NOTE: You cannot skip icons, e.g. to get a icon-6
+; you must also define a icon-5.
 
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
@@ -760,13 +765,13 @@ label-song-ellipsis = true
 label-offline = "MPD is offline"
 
 ; Only applies if <icon-X> is used
-icon-play = 
-icon-pause = 
-icon-stop = 
+icon-play = 
+icon-pause = 
+icon-stop = 
 icon-prev = 
 icon-next = 
-icon-seekb = ⏪
-icon-seekf = ⏩
+icon-seekb = 
+icon-seekf = 
 icon-random = 🔀
 icon-repeat = 🔁
 icon-repeatone = 🔂
@@ -1076,11 +1081,16 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = TTY;
-icon-1 = WEB;
-icon-2 = LAB;
-icon-3 = MED;
-;icon-4 = 5;
+icon-0=0;
+icon-1=1;
+icon-2=2;
+icon-3=3;
+icon-4=4;
+icon-5=5;
+icon-6=6;
+icon-7=7;
+icon-8=8;
+icon-9=9;
 icon-default = 
 
 ; Available tags:
