--- a/polybar/.config/polybar/user_modules.ini
+++ b/polybar/.config/polybar/user_modules.ini
@@ -252,7 +252,7 @@ expand-right = true
 menu-0-0 = Menu
 menu-0-0-exec = ~/.config/polybar/scripts/launcher &
 menu-0-1 = Files
-menu-0-1-exec = thunar &
+menu-0-1-exec = caja &
 menu-0-2 = Terminal
 menu-0-2-exec = xterm &
 menu-0-3 = Browser
@@ -285,7 +285,7 @@ label-separator-foreground = ${color.ac}
 [module/player-mpris-tail]
 type = custom/script
 
-exec = ~/bin/player-mpris-tail.py --icon-playing  --icon-paused  -f '{icon} {:artist:t18:{artist}:}{:artist: - :}{:t20:{title}:}'
+exec = ~/bin/player-mpris-tail.py --icon-playing  --icon-paused  --icon-stopped  -f '{icon} {:artist:t18:{artist}:}{:artist: - :}{:t20:{title}:}  %{A1:~/polybar-scripts/player-mpris-tail.py previous:}  %{A} %{A1:~/polybar-scripts/player-mpris-tail.py play-pause:} {icon-reversed} %{A} %{A1:~/polybar-scripts/player-mpris-tail.py next:}  %{A}'
 
 ; Will the script output continous content?
 tail = true
