migrate to picon from compton

--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -31,8 +31,8 @@ backend="glx"; # (xrender|glx|xr_glx_hybrid)
 
 # Xrender backend
 # --------------
-xrender-sync=true;
-xrender-sync-fence=false; # may be needed for nvidia with glx backend
+# Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
+xrender-sync-fence=false;
 
 # GLX backend
 # -----------
@@ -40,7 +40,8 @@ glx-no-stencil=true;
 glx-copy-from-front=false;
 # glx-use-copysubbuffermesa = false; # overrides `glx-copy-from-front`
 glx-no-rebind-pixmap=true; # recommended as "true" if it works with the video driver
-glx-swap-method="undefined"; # slowest, but safest
+# glx-swap-method has been deprecated since v6
+# glx-swap-method="undefined"; # slowest, but safest
 # glx-use-gpushader4=false;
 
 # Shadows
@@ -56,9 +57,8 @@ shadow-red=0.2 # default 0 = black (1.0 = white)
 shadow-green=0.2 # default 0 = black (1.0 = white)
 shadow-blue=0.2 # default 0 = black (1.0 = white)
 
-no-dnd-shadow=true; # "dnd" stands for "drag-n-drop"
-no-dock-shadow=true; # also applies to panels
-clear-shadow=true; # may not work with fully transparent ARGB
+# "clear-shadow" is removed as an option, and is always enabled now. Consider removing it from your config file
+# clear-shadow=true; # may not work with fully transparent ARGB
 shadow-ignore-shaped=true;
 
 # The shadow exclude options are helpful if you have shadows enabled.
@@ -75,8 +75,21 @@ shadow-exclude = [
     "name *?= 'Plank'",
     "name %= 'Plank'",
     "name ~= 'Plank'",
+    "name *= 'VLC'",
+    "name *= 'compton'",
+    "name *= 'picom'",
+    "name *= 'Chromium'",
+    "name *= 'Chrome'",
+    "class_g = 'Conky'",
+    "class_g = 'Kupfer'",
+    "class_g = 'Synapse'",
+    "class_g ?= 'Notify-osd'",
+    "class_g ?= 'Cairo-dock'",
+    "class_g ?= 'Xfce4-notifyd'",
+    "class_g ?= 'Xfce4-power-manager'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "_NET_WM_NAME@:s *?= 'Plank'",
-    "_GTK_FRAME_EXTENTS@:c"
 ];
 
 # Opacity, blur, fading
@@ -84,7 +97,6 @@ shadow-exclude = [
 
 active-opacity=1.0;
 frame-opacity=1.0;
-menu-opacity=1.0; # default 1.0
 inactive-opacity=1.0; # disabled by default
 inactive-opacity-override=true;
 inactive-dim=1.0 # default 1.0
@@ -123,28 +135,15 @@ detect-client-opacity=true;
 detect-transient=true;
 detect-client-leader=true;
 
-# Set VSync method. VSync methods currently available:
-# * none: No VSync
-# * drm: VSync with DRM_IOCTL_WAIT_VBLANK. May only work on some drivers.
-# * opengl: Try to VSync with SGI_video_sync OpenGL extension. Only work
-# on some drivers.
-# * opengl-oml: Try to VSync with OML_sync_control OpenGL extension.
-# Only work on some drivers.
-# * opengl-swc: Try to VSync with SGI_swap_control OpenGL extension.
-# Only work on some drivers. Works only with GLX backend. Known to be
-# most effective on many drivers. Does not actually control paint
-# timing, only buffer swap is affected, so it doesn't have the effect of
-# --sw-opti unlike other methods. Experimental.
-# * opengl-mswc: Try to VSync with MESA_swap_control OpenGL extension.
-# Basically the same as opengl-swc above, except the extension we use.
-# (Note some VSync methods may not be enabled at compile time.)
-vsync="opengl";
+# Vertical synchronization: match the refresh rate of the monitor
+vsync=true;
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully)
 # eliminate tearing.  Reported to have no effect, though.
 dbe=false;
 # Painting on X Composite overlay window. Recommended.
-paint-on-overlay=true;
+# "paint-on-overlay" has been removed as an option, and is enabled whenever possible
+# paint-on-overlay=true;
 
 # Limit compton to repaint at most once every 1 / refresh_rate second to
 # boost performance.  This should not be used with --vsync
@@ -175,4 +174,8 @@ wintypes:
         # focus: Whether to always consider windows of this type focused.
         focus=false;
     };
+    dock = { shadow = true; }
+    dnd = { shadow = true; }
+    popup_menu = { opacity = 1.0; }
+    dropdown_menu = { opacity = 1.0; }
 };
