--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -277,19 +277,19 @@ reverse-scroll = false
 ; Default: false
 fuzzy-match = true
 
-; icon-[0-9]+ = label;icon
+; ws-icon-[0-9]+ = label;icon
 ; Note that the label needs to correspond with the bspwm workspace name
-icon-0=0;
-icon-1=1;
-icon-2=2;
-icon-3=3;
-icon-4=4;
-icon-5=5;
-icon-6=6;
-icon-7=7;
-icon-8=8;
-icon-9=9;
-;;icon-default = 
+ws-icon-0=0;
+ws-icon-1=1;
+ws-icon-2=2;
+ws-icon-3=3;
+ws-icon-4=4;
+ws-icon-5=5;
+ws-icon-6=6;
+ws-icon-7=7;
+ws-icon-8=8;
+ws-icon-9=9;
+;;ws-icon-default = 
 
 ; Available tags:
 ;   <label-monitor>
