feat: Added player-mpris scripts

--- a/polybar/.config/polybar/config-bottom.ini
+++ b/polybar/.config/polybar/config-bottom.ini
@@ -163,7 +163,7 @@ font-2 = "xos4 Terminus:size=12;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = player-mpris-tail mpd
+modules-left = player-mpris-simple mpd
 modules-center = filesystem cpu memory updates network
 modules-right = volume
 
