--- a/polybar/.config/polybar/user_modules.ini
+++ b/polybar/.config/polybar/user_modules.ini
@@ -296,6 +296,22 @@ click-right = ~/bin/player-mpris-tail.py next &
 click-middle = ~/bin/player-mpris-tail.py play-pause &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/player-mpris-simple]
+type = custom/script
+
+exec = ~/.config/polybar/scripts/player-mpris-simple.sh
+
+interval = 2
+
+; Will the script output continous content?
+; tail = true
+
+click-left = playerctl previous &
+click-right = playerctl next &
+click-middle = playerctl play-pause &
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
 ;;	  / __/ / / / / /_    
