--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -168,6 +168,13 @@ bind -T copy-mode-vi PageUp            send-keys -X page-up
 bind -T copy-mode-vi WheelUpPane       select-pane \; send-keys -X -N 2 scroll-up
 bind -T copy-mode-vi WheelDownPane     select-pane \; send-keys -X -N 2 scroll-down
 
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
+# Middle click to paste from the clipboard
+unbind MouseDown2Pane
+bind -n MouseDown2Pane run "tmux set-buffer -- \"$(xclip -o -sel primary);\"; tmux paste-buffer -p"
+
 # wrap default shell in reattach-to-user-namespace if available
 # there is some hack with `exec & reattach`, credits to "https://github.com/gpakosz/.tmux"
 # don't really understand how it works, but at least window are not renamed to "reattach-to-user-namespace"
