--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,9 @@ setw -g aggressive-resize on
 unbind C-b
 set -g prefix C-a
 
+# send the prefix to client inside window
+bind-key C-b send-prefix
+
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
 set -g set-titles-string "#I:#W"
