--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,7 +21,7 @@ set -g prefix C-a
 # send the prefix to client inside window
 bind-key C-b send-prefix
 
-# Set parent terminal title to reflect current window in tmux session 
+# Set parent terminal title to reflect current window in tmux session
 set -g set-titles on
 set -g set-titles-string "#I:#W"
 
@@ -45,7 +45,7 @@ unbind '"'  # split-window
 # unbind }    # swap-pane -D
 # unbind {    # swap-pane -U
 # unbind [    # paste-buffer
-# unbind ]    
+# unbind ]
 unbind "'"  # select-window
 unbind n    # next-window
 unbind p    # previous-window
@@ -54,7 +54,7 @@ unbind M-n  # next window with alert
 unbind M-p  # next window with alert
 unbind o    # focus thru panes
 unbind &    # kill-window
-unbind "#"  # list-buffer 
+unbind "#"  # list-buffer
 unbind =    # choose-buffer
 unbind z    # zoom-pane
 unbind M-Up  # resize 5 rows up
@@ -66,7 +66,7 @@ unbind M-Left # resize 5 rows left
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
 
-# Reload tmux configuration 
+# Reload tmux configuration
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
@@ -203,7 +203,7 @@ if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
 #     send-keys -X copy-pipe "$yank"
 # bind -T copy-mode-vi MouseDown1Pane select-pane \;\
 #    send-keys -X clear-selection
-    
+
 # iTerm2 works with clipboard out of the box, set-clipboard already set to "external"
 # tmux show-options -g -s set-clipboard
 # set-clipboard on|external
@@ -283,11 +283,11 @@ wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed $wg_user_host | $wg_date #{online_status}"
+set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} / #{sysstat_mem} | $wg_user_host | #{online_status}"
 
 # online and offline icon for tmux-online-status
-set -g @online_icon "#[fg=$color_level_ok]●#[default]"
-set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
+#set -g @online_icon "#[fg=$color_level_ok]●#[default]"
+#set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
 
 # Configure tmux-prefix-highlight colors
 set -g @prefix_highlight_output_prefix '['
