set the dafault editor to nvim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -184,30 +184,6 @@ bind -n MouseDown2Pane run "tmux set-buffer -- \"$(xclip -o -sel primary);\"; tm
 if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
     "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
 
-# yank="~/.tmux/yank.sh"
-
-# # Copy selected text
-# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "$yank"
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "$yank"
-# bind -T copy-mode-vi Y send-keys -X copy-line \;\
-#     run "tmux save-buffer - | $yank"
-# bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
-#     run "tmux save-buffer - | $yank"
-# bind -T copy-mode-vi C-j send-keys -X copy-pipe-and-cancel "$yank"
-# bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
-#     run "tmux save-buffer - | $yank"
-
-# # Copy selection on drag end event, but do not cancel copy mode and do not clear selection
-# # clear select on subsequence mouse click
-# bind -T copy-mode-vi MouseDragEnd1Pane \
-#     send-keys -X copy-pipe "$yank"
-# bind -T copy-mode-vi MouseDown1Pane select-pane \;\
-#    send-keys -X clear-selection
-
-# iTerm2 works with clipboard out of the box, set-clipboard already set to "external"
-# tmux show-options -g -s set-clipboard
-# set-clipboard on|external
-
 # =====================================
 # ===           Theme               ===
 # =====================================
@@ -286,8 +262,8 @@ set -g status-left "$wg_session"
 set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} / #{sysstat_mem} | $wg_user_host | #{online_status}"
 
 # online and offline icon for tmux-online-status
-#set -g @online_icon "#[fg=$color_level_ok]●#[default]"
-#set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
+set -g @online_icon "#[fg=$color_level_ok]●#[default]"
+set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
 
 # Configure tmux-prefix-highlight colors
 set -g @prefix_highlight_output_prefix '['
