user nerd font icons in polybar theme

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -67,7 +67,7 @@ module-margin-right = 1
 ;==========================================================
 
 font-0 = "Fantasque Sans Mono:pixelsize=12;2"
-font-1 = "Material Icons:size=13;4"
+font-1 = "Inconsolata Nerd Font:size=14;4"
 
 ;==========================================================
 
@@ -83,7 +83,7 @@ scroll-down = i3wm-wsprev
 
 ;== Module Location ========================================================
 
-modules-left = menu workspaces term files browser settings
+modules-left = menu workspaces files browser settings
 modules-center = player-mpris-tail
 modules-right = keyboard pkg redshift volume network date powermenu
 
@@ -91,7 +91,7 @@ modules-right = keyboard pkg redshift volume network date powermenu
 
 [module/menu]
 type = custom/text
-content = 
+content = 舘
 ;alt-icon = 
 content-padding = 2
 content-background = ${color.acolor}
@@ -99,6 +99,7 @@ content-foreground = ${color.fg}
 click-left = $HOME/.config/polybar/scripts/menu
 click-middle = $HOME/.config/polybar/scripts/menu_full
 click-right = $HOME/.config/polybar/scripts/color-switch.sh
+
 [module/workspaces]
 type = internal/xworkspaces
 pin-workspaces = false
@@ -106,16 +107,16 @@ enable-click = true
 enable-scroll = true
 format-padding = 0
 
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-5 = 6;
-icon-6 = 7;
-icon-7 = 8;
-icon-8 = 9;
-icon-9 = 10;
+icon-0 = 0;
+icon-1 = 1;
+icon-2 = 2;
+icon-3 = 3;
+icon-4 = 4;
+icon-5 = 5;
+icon-6 = 6;
+icon-7 = 7;
+icon-8 = 8;
+icon-9 = 9;
 icon-default =
 
 format = <label-state>
@@ -147,7 +148,7 @@ click-right = urxvt &
 
 [module/files]
 type = custom/text
-content = 
+content = 
 content-padding = 1
 content-foreground = ${color.fg-alt}
 click-left = caja &
@@ -155,7 +156,7 @@ click-right = caja &
 
 [module/browser]
 type = custom/text
-content = 
+content = 
 content-padding = 1
 content-foreground = ${color.fg-alt}
 click-left = firefox &
@@ -163,7 +164,7 @@ click-right = develop-browser &
 
 [module/settings]
 type = custom/text
-content = 
+content = 漣
 content-padding = 1
 content-foreground = ${color.fg-alt}
 click-left = mate-control-center &
@@ -187,7 +188,7 @@ label-song-ellipsis = true
 [module/player-mpris-tail]
 type = custom/script
 
-exec = ~/.config/polybar/scripts/player-mpris-tail.py --icon-playing  --icon-paused  --icon-stopped  -f '{icon} {:artist:t18:{artist}:}{:artist: - :}{:t20:{title}:}  %{A1:~/polybar-scripts/player-mpris-tail.py previous:}  %{A} %{A1:~/polybar-scripts/player-mpris-tail.py play-pause:} {icon-reversed} %{A} %{A1:~/polybar-scripts/player-mpris-tail.py next:}  %{A}'
+exec = ~/.config/polybar/scripts/player-mpris-tail.py --icon-playing 契 --icon-paused  --icon-stopped 栗 -f '{icon} {:artist:t18:{artist}:}{:artist: - :}{:t20:{title}:}  %{A1:~/polybar-scripts/player-mpris-tail.py previous:} 玲%{A} %{A1:~/polybar-scripts/player-mpris-tail.py play-pause:} {icon-reversed} %{A} %{A1:~/polybar-scripts/player-mpris-tail.py next:} 怜%{A}'
 
 ; Will the script output continous content?
 tail = true
@@ -220,7 +221,7 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = scroll lock
 
-format =  <label-layout> <label-indicator>
+format =  <label-layout> <label-indicator>
 
 label-layout = %layout%
 label-indicator-on = %name%
@@ -246,16 +247,14 @@ type = internal/alsa
 ;mapped = true
 format-volume = <ramp-volume> <label-volume>
 label-volume = %percentage%%
-format-muted-prefix = " "
-label-muted = MUTE
+label-muted = 婢 MUTE
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-ramp-volume-5 = 
-ramp-volume-6 = 
+ramp-volume-0 = 奄
+ramp-volume-1 = 奔
+ramp-volume-2 = 墳
+
+ramp-headphones-0 = 
+ramp-headphones-1 = 
 
 [module/network]
 type = custom/script
@@ -268,12 +267,12 @@ tail = true
 type = internal/date
 interval = 30
 label =  %time%
-time =  %H:%M
-time-alt =  %Y-%m-%d
+time = %H:%M
+time-alt = %Y-%m-%d
 
 [module/powermenu]
 type = custom/text
-content = 
+content = 襤
 content-padding = 2
 content-background = ${color.acolor}
 content-foreground = ${color.fg}
