fix vim colorscheme inside tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@
 # ==========================
 
 set -g default-command /bin/bash
+set -ga terminal-overrides ",*256col*:Tc"
 set -g default-terminal "screen-256color"
 set -g history-limit 20000
 set -g buffer-limit 20
