Added new vim plugins

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,18 +1,5 @@
 {
-  "diagnostic.warningSign": "⚡",
-  "diagnostic.errorSign": "✘",
-  "diagnostic.hintSign": "瘟",
-  "diagnostic.infoSign": "",
-  "diagnostic.enable": true,
-  "coc.preferences.formatOnSaveFiletypes": [
-    "Markdown",
-    "javascript",
-    "typescript",
-    "typescriptreact",
-    "json",
-    "html",
-    "rust"
-  ],
+  "diagnostic.displayByAle": true,
   "javascript.suggestionActions.enabled": false,
   "prettier.singleQuote": true,
   "prettier.eslintIntegration": true,
@@ -21,5 +8,6 @@
   "suggest.removeDuplicateItems": true,
   "tsserver.npm": "~/.npm-global/bin/npm",
   "css.validate": false,
-  "scss.validate": false
+  "scss.validate": false,
+  "vetur.validation.style": false
 }
