--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,18 +2,15 @@
 # ===  General settings  ===
 # ==========================
 
-set -g default-command /bin/bash
-set -ga terminal-overrides ",*256col*:Tc"
-set -g default-terminal "screen-256color"
-set -g history-limit 20000
-set -g buffer-limit 20
-set -sg escape-time 0
-set -g display-time 1500
-set -g remain-on-exit off
-set -g repeat-time 300
-setw -g allow-rename off
-setw -g automatic-rename off
-setw -g aggressive-resize on
+set   -g  default-command /bin/bash
+set   -ga terminal-overrides ",*256col*:Tc"
+set   -g  default-terminal "screen-256color"
+set   -g  buffer-limit 20
+set   -sg escape-time 0
+set   -g  remain-on-exit off
+set   -g  repeat-time 300
+setw  -g  allow-rename off
+setw  -g  automatic-rename off
 
 # Change prefix key to C-a, easier to type, same to "screen"
 unbind C-b
@@ -27,12 +24,26 @@ set -g set-titles on
 set -g set-titles-string "#I:#W"
 
 # Start index of window/pane with 1, because we're humans, not computers
-set -g base-index 1
-setw -g pane-base-index 1
+set   -g base-index 1
+setw  -g pane-base-index 1
 
 # Enable mouse support
 set -g mouse on
 
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
+# refresh 'status-left' and 'status-right' more often
+set -g status-interval 5
+
+# focus events enabled for terminals that support them
+set -g focus-events on
+
+# super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
+
+# increase scrollback buffer size
+set -g history-limit 50000
 
 # ==========================
 # ===   Key bindings     ===
