--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,9 +33,6 @@ set -g mouse on
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
 
-# refresh 'status-left' and 'status-right' more often
-set -g status-interval 5
-
 # focus events enabled for terminals that support them
 set -g focus-events on
 
@@ -147,15 +144,15 @@ bind M if -F '#{monitor-silence}' \
     'setw monitor-silence 0 ; display-message "Monitor window silence [OFF]"' \
     'command-prompt -p "Monitor silence: interval (s)" "setw monitor-silence %%"'
 
-# Activity bell and whistles
-set -g visual-activity on
-
-# TODO: Does not work as well, check on newer versions
-# set -g visual-silence on
-
-# BUG: bell-action other ignored · Issue #1027 · tmux/tmux · GitHub - https://github.com/tmux/tmux/issues/1027
-# set -g visual-bell on
-# setw -g bell-action other
+# Alerts
+set -g monitor-bell on # check for terminal bell
+set -g monitor-activity on # check for activity
+set -g monitor-silence 0 # do not check for inactivity
+set -g bell-action any # monitor all windows
+set -g activity-action other # monitor activity in other windows NOTE DO NOT TRACK CURRENT
+set -g silence-action none # this should have no effect when: monitor-silence off
+set -g visual-activity on # show message, make no sound
+set -g visual-bell on # show message, make no sound
 
 # ================================================
 # ===     Copy mode, scroll and clipboard      ===
@@ -200,94 +197,87 @@ if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
 # ===           Theme               ===
 # =====================================
 
-# Feel free to NOT use this variables at all (remove, rename)
-# this are named colors, just for convenience
-color_orange="colour166" # 208, 166
-color_purple="colour134" # 135, 134
-color_green="colour076" # 070
-color_blue="colour39"
-color_yellow="colour220"
-color_red="colour160"
-color_black="colour232"
-color_white="white" # 015
-
-# This is a theme CONTRACT, you are required to define variables below
-# Change values, but not remove/rename variables itself
-color_dark="$color_black"
-color_light="$color_white"
-color_session_text="$color_blue"
-color_status_text="colour245"
-color_main="$color_orange"
-color_secondary="$color_purple"
-color_level_ok="$color_green"
-color_level_warn="$color_yellow"
-color_level_stress="$color_red"
-color_window_off_indicator="colour088"
-color_window_off_status_bg="colour238"
-color_window_off_status_current_bg="colour254"
+tempus_fg="#aeadaf"
+tempus_bg="#232323"
+tempus_fg_alt="#949d9f"
+tempus_bg_alt="#312e30"
+tempus_bg_dim="#2a2829"
 
 # =====================================
 # ===    Appearence and status bar  ===
 # ======================================
 
-set -g mode-style "fg=default,bg=$color_main"
+# Default window colours are inherited from the underlying terminal.
+# This also allows for a transparent background.
+set -g window-style "bg=default,fg=default"
+set -g window-active-style "bg=default,fg=default"
 
-# command line style
-set -g message-style "fg=$color_main,bg=$color_dark"
+# Pane styles.  Setting the bg to "default" allows for transparency, if
+# the underlying terminal emulator is configured accordingly.
+set -g pane-border-style "bg=$tempus_bg_dim,fg=$tempus_bg_alt"
+set -g pane-active-border-style "bg=$tempus_bg_alt,fg=$tempus_fg_alt"
 
-# status line style
-set -g status-style "fg=$color_status_text,bg=$color_dark"
+# Status line styles.  Used when displaying status messages and when
+# using the command prompt.
+set -g message-style "bg=default,fg=default,bold"
 
-# window segments in status line
-set -g window-status-separator ""
-separator_powerline_left=""
-separator_powerline_right=""
+# Clock mode options (I seldom use this, but okay).
+set -g clock-mode-style 24 # time format
+set -g clock-mode-colour "$tempus_fg_alt"
 
-# setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
-setw -g window-status-format " #I:#W "
-setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main] #I:#W# #[fg=$color_main,bg=$color_dark]#[default]"
+# Copy mode styles.  This governs such things as the visual selection
+# block and the search results in the scroll buffer.  I choose to avoid
+# setting to plain "reverse" because it is visually identical to Vim's
+# selection, which can be confusing sometimes.
+set -g mode-style "bg=$tempus_bg_alt,fg=colour6,bold,underscore"
 
-# when window has monitoring notification
-setw -g window-status-activity-style "fg=$color_main"
+# Status bar
+# ----------
 
-# outline for active pane
-setw -g pane-active-border-style "fg=$color_main"
+# Interval to update status bar in seconds.  Only affects some elements.
+# Test on a case-by-case basis.  My setup is not affected.
+set -g status-interval 5
 
 # general status bar settings
 set -g status on
-set -g status-interval 5
+set -g status-style "fg=$tempus_fg,bg=$tempus_bg_alt"
 set -g status-position bottom
 set -g status-justify left
-set -g status-right-length 100
+
+# NOTE the status bar has three components: left, right, centre.  The
+# latter is hard-coded to the window list component.  So instead of
+# status-centre, we have to modify the `window-status` (see below).
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+# Window status.  Always placed in the centre if `status-justify
+# "centre"`.  Otherwise it floats next to either of the two remaining
+# components of the status bar.
+#
+# NOTE trigger alert to test bell: echo -e '\a'
+separator_powerline_left=""
+separator_powerline_right=""
+set -g window-status-separator ""
+set -g window-status-format " #I:#W "
+set -g window-status-current-format "#[bold] #I: #W #[fg=colour15,bg=$tempus_bg_alt]$separator_powerline_right"
+set -g window-status-activity-style ""
+set -g window-status-bell-style "fg=colour1,bg=default"
+set -g window-status-style "fg=$tempus_fg_alt,bg=$tempus_bg_alt"
+set -g window-status-current-style "fg=colour0,bg=colour15"
+set -g window-status-last-style ""
 
 # define widgets we're going to use in status bar
 # note, that this is not the complete list, some of them are loaded from plugins
-wg_session="#[fg=$color_session_text] #S #[default]"
-wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
-wg_user_host="#[fg=$color_secondary]#(whoami)#[default]@#H"
-wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
-# TODO: highlighted for nested local session as well
-wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
+wg_session="#[bold,fg=colour2,bg=$tempus_bg_alt] #S #[default]"
+wg_user_host="#[bold]#(whoami)@#[default]#H"
+wg_is_zoomed="#[fg=colour0,bg=colour4]#{?window_zoomed_flag,[Z],}#[default]"
 
+# TODO: highlighted for nested local session as well
+wg_is_keys_off="#[fg=colour0,bg=colour13]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
+
+# Status left and right
 set -g status-left "$wg_session"
 set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} / #{sysstat_mem} | $wg_user_host | #{online_status}"
-
-# online and offline icon for tmux-online-status
-set -g @online_icon "#[fg=$color_level_ok]●#[default]"
-set -g @offline_icon "#[fg=$color_level_stress]●#[default]"
-
-# Configure tmux-prefix-highlight colors
-set -g @prefix_highlight_output_prefix '['
-set -g @prefix_highlight_output_suffix ']'
-set -g @prefix_highlight_fg "$color_dark"
-set -g @prefix_highlight_bg "$color_secondary"
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
-
-# Configure tmux-yank
-# set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
-set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 # =====================================
 # ===        Renew environment      ===
@@ -304,7 +294,6 @@ set -g update-environment \
 
 bind '$' run "~/.tmux/renew_env.sh"
 
-
 # ============================
 # ===       Plugins        ===
 # ============================
@@ -318,6 +307,21 @@ set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 set -g @open-S 'https://www.google.com/search?q='
 
+# online and offline icon for tmux-online-status
+set -g @online_icon "#[fg=colour2]● #[default]"
+set -g @offline_icon "#[fg=colour13]● #[default]"
+
+# Configure tmux-prefix-highlight colors
+set -g @prefix_highlight_output_prefix '['
+set -g @prefix_highlight_output_suffix ']'
+set -g @prefix_highlight_fg "colour0"
+set -g @prefix_highlight_bg "colour4"
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr "fg=colour0,bg=colour4"
+
+# Configure tmux-yank
+# set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
+set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 # ==============================================
 # ===   Nesting local and remote sessions     ===
