--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -66,8 +66,8 @@ module-margin-right = 1
 
 ;==========================================================
 
-font-0 = "Fantasque Sans Mono:pixelsize=12;2"
-font-1 = "Inconsolata Nerd Font:size=14;4"
+font-0 = "Fantasque Sans Mono:pixelsize=14;2"
+font-1 = "JetBrainsMono Nerd Font Mono:size=16;4"
 
 ;==========================================================
 
@@ -221,7 +221,8 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = scroll lock
 
-format =  <label-layout> <label-indicator>
+format =   <label-layout> <label-indicator>
+format-spacing = 0
 
 label-layout = %layout%
 label-indicator-on = %name%
