--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -261,7 +261,7 @@ set -g window-status-separator ""
 set -g window-status-format " #I:#W "
 set -g window-status-current-format "#[bold] #I: #W #[fg=colour15,bg=$tempus_bg_alt]$separator_powerline_right"
 set -g window-status-activity-style ""
-set -g window-status-bell-style "fg=colour1,bg=default"
+set -g window-status-bell-style "fg=colour0,bg=colour14"
 set -g window-status-style "fg=$tempus_fg_alt,bg=$tempus_bg_alt"
 set -g window-status-current-style "fg=colour0,bg=colour15"
 set -g window-status-last-style ""
@@ -294,6 +294,33 @@ set -g update-environment \
 
 bind '$' run "~/.tmux/renew_env.sh"
 
+# ==============================================
+# ===   Nesting local and remote sessions     ===
+# ==============================================
+
+# Session is considered to be remote when we ssh into host
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file ~/.tmux/tmux.remote.conf'
+
+# We want to have single prefix key "C-a", usable both for local and remote session
+# we don't want to "C-a" + "a" approach either
+# Idea is to turn off all key bindings and prefix handling on local session,
+# so that all keystrokes are passed to inner/remote session
+
+# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
+
+# Also, change some visual styles when window keys are off
+bind -T root F12  \
+    set prefix None \;\
+    set key-table off \;\
+    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+    refresh-client -S \;\
+
+bind -T off F12 \
+  set -u prefix \;\
+  set -u key-table \;\
+  refresh-client -S
+
 # ============================
 # ===       Plugins        ===
 # ============================
@@ -322,39 +349,6 @@ set -g @prefix_highlight_copy_mode_attr "fg=colour0,bg=colour4"
 # Configure tmux-yank
 # set -g @yank_action 'copy-pipe' # or 'copy-pipe-and-cancel' for the default
 set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
-
-# ==============================================
-# ===   Nesting local and remote sessions     ===
-# ==============================================
-
-# Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux/tmux.remote.conf'
-
-# We want to have single prefix key "C-a", usable both for local and remote session
-# we don't want to "C-a" + "a" approach either
-# Idea is to turn off all key bindings and prefix handling on local session,
-# so that all keystrokes are passed to inner/remote session
-
-# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
-
-# Also, change some visual styles when window keys are off
-bind -T root F12  \
-    set prefix None \;\
-    set key-table off \;\
-    set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
-    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
-    set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
-    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-    refresh-client -S \;\
-
-bind -T off F12 \
-  set -u prefix \;\
-  set -u key-table \;\
-  set -u status-style \;\
-  set -u window-status-current-style \;\
-  set -u window-status-current-format \;\
-  refresh-client -S
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
