Update 'terminal-overrides' and 'send-prefix' options in tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@
 # ==========================
 
 set   -g  default-command /bin/bash
-set   -ga terminal-overrides ",*256col*:Tc"
+set   -sa terminal-overrides ",xterm*:RGB"
 set   -g  default-terminal "screen-256color"
 set   -g  buffer-limit 20
 set   -sg escape-time 0
@@ -17,7 +17,7 @@ unbind C-b
 set -g prefix C-a
 
 # send the prefix to client inside window
-bind-key C-b send-prefix
+bind-key C-a send-prefix
 
 # Set parent terminal title to reflect current window in tmux session
 set -g set-titles on
