Remove redshift polybar script

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -236,9 +236,10 @@ tail = true
 
 [module/redshift]
 type = custom/script
-exec = ~/.config/polybar/scripts/redshift.sh
+exec = ~/bin/toggle --redshift
+tail = true
 
-click-left = ~/.config/polybar/scripts/redshift.sh --toggle
+click-left = ~/bin/toggle --redshift -t
 
 [module/volume]
 type = internal/alsa
