--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@
 # ==========================
 
 set   -g  default-command /bin/bash
-set   -sa terminal-overrides ",xterm*:RGB"
+set   -sa terminal-overrides ",xterm-256color:RGB"
 set   -g  default-terminal "screen-256color"
 set   -g  buffer-limit 20
 set   -sg escape-time 0
@@ -134,7 +134,8 @@ bind D if -F '#{session_many_attached}' \
 # Hide status bar on demand
 bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 
-
+# Switch pane
+bind 0 run "tmux split-window -l 10 'bash -ci ftpane'"
 
 # ==================================================
 # === Window monitoring for activity and silence ===
