--- a/spotify/.config/spotifyd/spotifyd.conf
+++ b/spotify/.config/spotifyd/spotifyd.conf
@@ -1,9 +1,6 @@
 [global]
 # Your Spotify account name.
-username = solay007-SV
-
-# Your Spotify account password.
-# password = 
+username = "solay007-SV"
 
 # A command that gets executed and can be used to
 # retrieve your password.
@@ -11,44 +8,37 @@ username = solay007-SV
 #
 # This is an alternative to the `password` field. Both
 # can't be used simultaneously.
-password_cmd = secret-tool lookup 2516 ernest
-
-# If set to true, `spotifyd` tries to look up your
-# password in the system's password storage.
-#
-# This is an alternative to the `password` field. Both
-# can't be used simultaneously.
-#use_keyring = true
+password_cmd = "pass show spotify.com/solay | head -n 1"
 
 # The audio backend used to play the your music. To get
 # a list of possible backends, run `spotifyd --help`.
-backend = pulseaudio
+backend = "pulseaudio"
 
 # The alsa audio device to stream audio to. To get a
 # list of valid devices, run `aplay -L`,
-#device = pulse
+#device = "hw:1,0"  # omit for macOS
 
 # The alsa control device. By default this is the same
 # name as the `device` field.
-#control = sysdefault:CARD=Generic_1
+#control = "hw:1"  # omit for macOS
 
 # The alsa mixer used by `spotifyd`.
-#mixer = PCM
+#mixer = "PCM"
 
 # The volume controller. Each one behaves different to
 # volume increases. For possible values, run
 # `spotifyd --help`.
-volume_controller = alsa  # use softvol for macOS
+volume_controller = "alsa"  # use softvol for macOS
 
 # A command that gets executed in your shell after each song changes.
-#on_song_change_hook = command_to_run_on_playback_events
+on_song_change_hook = "sp notify"
 
 # The name that gets displayed under the connect tab on
 # official clients. Spaces are not allowed!
-device_name = spotitui
+device_name = "spotifyd-solay"
 
 # The audio bitrate. 96, 160 or 320 kbit/s
-bitrate = 160
+bitrate = 320
 
 # The director used to cache audio data. This setting can save
 # a lot of bandwidth when activated, as it will avoid re-downloading
@@ -56,24 +46,18 @@ bitrate = 160
 #
 # Note: The file path does not get expanded. Environment variables and
 # shell placeholders like $HOME or ~ don't work!
-cache_path = ache_path = cache_directory
+cache_path = "/home/ernest/.cache/spotifyd-offline"
 
 # If set to true, audio data does NOT get cached.
-no_audio_cache = true
+#no_audio_cache = false
 
 # If set to true, enables volume normalisation between songs.
 volume_normalisation = true
 
 # The normalisation pregain that is applied for each song.
-normalisation_pregain = -10
-
-# The port `spotifyd` uses to announce its service over the network.
-#zeroconf_port = 1234
-
-# The proxy `spotifyd` will use to connect to spotify.
-#proxy = http://proxy.example.org:8080
+#normalisation_pregain = -10
 
 # The displayed device type in Spotify clients.
 # Can be unknown, computer, tablet, smartphone, speaker, tv,
 # avr (Audio/Video Receiver), stb (Set-Top Box), and audiodongle.
-device_type = computer
+device_type = "computer"
