--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,6 +1,8 @@
 {
   "diagnostic.displayByAle": true,
   "javascript.suggestionActions.enabled": false,
+  "javascript.validate.enable": false,
+  "typescript.validate.enable": false,
   "suggest.removeDuplicateItems": true,
   "css.validate": false,
   "scss.validate": false,
