Disable intelephense undefinedType diagnostic

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -12,6 +12,7 @@
   "python.jediEnabled": false,
   "intelephense.diagnostics.typeErrors": false,
   "intelephense.diagnostics.undefinedMethods": false,
+  "intelephense.diagnostics.undefinedTypes": false,
   "intelephense.format.enable": false,
   "intelephense.files.exclude": [
     "**/.git/**",
