--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -6,9 +6,9 @@
   "suggest.removeDuplicateItems": true,
   "css.validate": false,
   "scss.validate": false,
-  "prettier.disableLanguages": [],
   "vetur.format.enable": false,
   "vetur.validation.style": false,
+  "vetur.experimental.templateInterpolationService": true,
   "python.jediEnabled": false,
   "intelephense.diagnostics.typeErrors": false,
   "intelephense.diagnostics.undefinedMethods": false,
