--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -45,8 +45,8 @@ blue-gray = #546e7a
 
 ;==========================================================
 
-[bar/main]
-monitor =
+[bar/dvi]
+monitor = DVI-D-0
 width = 100%
 height = 40
 offset-x = 0
@@ -85,6 +85,34 @@ scroll-down = i3wm-wsprev
 
 modules-left = menu workspaces files browser settings
 modules-center = player-mpris-tail
+modules-right = keyboard pkg redshift volume network date powermenu
+
+[bar/hdmi]
+monitor = HDMI-A-0
+height = 40
+offset-x = 0
+offset-y = 0
+bottom = true
+fixed-center = false
+line-size = 2
+
+background = ${color.bg}
+foreground = ${color.fg}
+
+border-size = 3
+border-color = ${color.bg}
+
+module-margin-left = 1
+module-margin-right = 1
+
+;==========================================================
+
+font-0 = "Fantasque Sans Mono:pixelsize=14;2"
+font-1 = "JetBrainsMono Nerd Font Mono:size=16;4"
+
+;==========================================================
+
+modules-left = workspaces files browser settings
 modules-right = keyboard pkg redshift volume network date powermenu
 
 ;== Modules ========================================================
