--- a/music/.config/spotifyd/spotifyd.conf
+++ b/music/.config/spotifyd/spotifyd.conf
@@ -46,7 +46,7 @@ bitrate = 320
 #
 # Note: The file path does not get expanded. Environment variables and
 # shell placeholders like $HOME or ~ don't work!
-cache_path = "/home/ernest/.cache/spotifyd-offline"
+cache_path = "/media/storage/.cache/spotifyd"
 
 # If set to true, audio data does NOT get cached.
 #no_audio_cache = false
