refactor: remove powerline simbols from tmux status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -256,11 +256,9 @@ set -g status-right-length "100"
 # components of the status bar.
 #
 # NOTE trigger alert to test bell: echo -e '\a'
-separator_powerline_left=""
-separator_powerline_right=""
 set -g window-status-separator ""
 set -g window-status-format " #I:#W "
-set -g window-status-current-format "#[bold] #I: #W #[fg=colour15,bg=$tempus_bg_alt]$separator_powerline_right"
+set -g window-status-current-format "#[bold] #I:#W #[fg=colour15,bg=$tempus_bg_alt]"
 set -g window-status-activity-style ""
 set -g window-status-bell-style "fg=colour0,bg=colour14"
 set -g window-status-style "fg=$tempus_fg_alt,bg=$tempus_bg_alt"
