feat: add key binding to open url inside tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -137,6 +137,10 @@ bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 # Switch pane
 bind 0 run "tmux split-window -l 10 'bash -ci ftpane'"
 
+bind-key u capture-pane \;\
+  save-buffer /tmp/tmux-buffer \;\
+  split-window -l 10 "urlview /tmp/tmux-buffer"
+
 # ==================================================
 # === Window monitoring for activity and silence ===
 # ==================================================
