ignore bak files

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ qutebrowser/.config/qutebrowser/bookmarks/urls
 qutebrowser/.config/qutebrowser/quickmarks
 qutebrowser/.config/qutebrowser/autoconfig.yml
 qutebrowser/.config/qutebrowser/qsettings/QtProject.conf
+
+*-bak
+*.bak
