--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,312 +1,82 @@
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;
-;;	    ____        __      __
-;;	   / __ \____  / /_  __/ /_  ____ ______
-;;	  / /_/ / __ \/ / / / / __ \/ __ `/ ___/
-;;	 / ____/ /_/ / / /_/ / /_/ / /_/ / /
-;;	/_/    \____/_/\__, /_.___/\__,_/_/
-;;	              /____/
-;;
-;; Created By Aditya Shakya @adi1090x
-;;
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[color]
-
-bg = #1F1F1F
-fg = #FFFFFF
-fg-alt = #A9ABB0
-
-acolor = #00897b
-curgent = #e53935
-coccupied = #1e88e5
-
-## Material Colors
-
-red = #e53935
-pink = #d81b60
-purple = #8e24aa
-deep-purple = #5e35b1
-indigo = #3949ab
-blue = #1e88e5
-light-blue = #039be5
-cyan = #00acc1
-teal = #00897b
-green = #43a047
-light-green = #7cb342
-lime = #c0ca33
-yellow = #fdd835
-amber = #ffb300
-orange = #fb8c00
-deep-orange = #f4511e
-brown = #6d4c41
-grey = #757575
-blue-gray = #546e7a
-
-;==========================================================
-
-[bar/dvi]
-monitor = DVI-D-0
-width = 100%
-height = 40
-offset-x = 0
-offset-y = 0
-bottom = true
-fixed-center = false
-line-size = 2
-
-background = ${color.bg}
-foreground = ${color.fg}
-
-border-size = 3
-border-color = ${color.bg}
-
-module-margin-left = 1
-module-margin-right = 1
-
-;==========================================================
-
-font-0 = "Fantasque Sans Mono:pixelsize=14;2"
-font-1 = "JetBrainsMono Nerd Font Mono:size=16;4"
-
-;==========================================================
-
-cursor-click = pointer
-
-;tray-position = right
-;tray-padding = 0
-;tray-maxsize = 16
-enable-ipc = true
-
-scroll-up = i3wm-wsnext
-scroll-down = i3wm-wsprev
-
-;== Module Location ========================================================
-
-modules-left = menu workspaces files browser settings
-modules-center = player-mpris-tail
-modules-right = keyboard pkg redshift volume network date powermenu
-
-[bar/hdmi]
-monitor = HDMI-A-0
-height = 40
-offset-x = 0
-offset-y = 0
-bottom = true
-fixed-center = false
-line-size = 2
-
-background = ${color.bg}
-foreground = ${color.fg}
-
-border-size = 3
-border-color = ${color.bg}
-
-module-margin-left = 1
-module-margin-right = 1
-
-;==========================================================
-
-font-0 = "Fantasque Sans Mono:pixelsize=14;2"
-font-1 = "JetBrainsMono Nerd Font Mono:size=16;4"
-
-;==========================================================
-
-modules-left = workspaces files browser settings
-modules-right = keyboard pkg date powermenu
-
-;== Modules ========================================================
-
-[module/menu]
-type = custom/text
-content = 舘
-;alt-icon = 
-content-padding = 2
-content-background = ${color.acolor}
-content-foreground = ${color.fg}
-click-left = $HOME/.config/polybar/scripts/menu
-click-middle = $HOME/.config/polybar/scripts/menu_full
-click-right = $HOME/.config/polybar/scripts/color-switch.sh
-
-[module/workspaces]
-type = internal/xworkspaces
-pin-workspaces = false
-enable-click = true
-enable-scroll = true
-format-padding = 0
-
-icon-0 = 0;
-icon-1 = 1;
-icon-2 = 2;
-icon-3 = 3;
-icon-4 = 4;
-icon-5 = 5;
-icon-6 = 6;
-icon-7 = 7;
-icon-8 = 8;
-icon-9 = 9;
-icon-default =
-
-format = <label-state>
-label-active = %icon%
-label-occupied = %icon%
-label-urgent = %icon%
-label-empty = %icon%
-
-label-occupied-padding = 2
-label-empty-padding = 2
-label-urgent-padding = 2
-label-active-padding = 2
-
-label-active-foreground = ${color.acolor}
-label-urgent-foreground = ${color.curgent}
-label-empty-foreground = ${color.fg}
-label-occupied-foreground = ${color.coccupied}
-
-label-active-underline = ${color.acolor}
-label-urgent-underline = ${color.curgent}
-label-occupied-underline = ${color.coccupied}
-
-[module/term]
-type = custom/text
-content = 
-content-foreground = ${color.fg-alt}
-click-left = xterm &
-click-right = urxvt &
-
-[module/files]
-type = custom/text
-content = 
-content-padding = 1
-content-foreground = ${color.fg-alt}
-click-left = caja &
-click-right = caja &
-
-[module/browser]
-type = custom/text
-content = 
-content-padding = 1
-content-foreground = ${color.fg-alt}
-click-left = firefox &
-click-right = develop-browser &
-
-[module/settings]
-type = custom/text
-content = 漣
-content-padding = 1
-content-foreground = ${color.fg-alt}
-click-left = mate-control-center &
-click-right = lxappearance &
-
-;==========================================================
-
-[module/mpd]
-type = internal/mpd
-;format-online = <toggle> <label-song>
-format-online =  <label-song>
-
-icon-play = 
-icon-pause = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
+;; ┌────────────────────────────────────────────────────────────┐
+;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
+;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
+;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀│
+;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; └────────────────────────────────────────────────────────────┘
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/player-mpris-tail]
-type = custom/script
+;; Global WM Settings
 
-exec = ~/.config/polybar/scripts/player-mpris-tail.py --icon-playing   --icon-paused  --icon-stopped 栗 -f '{icon} {artist} - {title}'
+[global/wm]
+; Adjust the _NET_WM_STRUT_PARTIAL top value
+; Used for top aligned bars
+margin-bottom = 0
 
-; Will the script output continous content?
-tail = true
+; Adjust the _NET_WM_STRUT_PARTIAL bottom value
+; Used for bottom aligned bars
+margin-top = 0
 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-click-left = ~/.config/polybar/scripts/player-mpris-tail.py previous &
-click-right = ~/.config/polybar/scripts/player-mpris-tail.py next &
-click-middle = ~/.config/polybar/scripts/player-mpris-tail.py &
+;; File Inclusion
+; include an external file, like module file, etc.
 
-[module/player-mpris-simple]
-type = custom/script
+include-file = ~/.config/polybar/bars.ini
+include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/modules.ini
+include-file = ~/.config/polybar/user_modules.ini
 
-exec = ~/.config/polybar/scripts/player-mpris-simple.sh
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-interval = 2
+;; Bar Settings
 
-; Will the script output continous content?
-; tail = true
+include-file = ~/.config/polybar/dvi.ini
+include-file = ~/.config/polybar/hdmi.ini
 
-click-left = playerctl previous &
-click-right = playerctl next &
-click-middle = playerctl play-pause &
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;==========================================================
+;; Application Settings
 
-[module/keyboard]
-type = internal/xkeyboard
+[settings]
+; The throttle settings lets the eventloop swallow up til X events
+; if they happen within Y millisecond after first event was received.
+; This is done to prevent flood of update event.
+;
+; For example if 5 modules emit an update event at the same time, we really
+; just care about the last one. But if we wait too long for events to swallow
+; the bar would appear sluggish so we continue if timeout
+; expires or limit is reached.
+throttle-output = 5
+throttle-output-for = 10
 
-; List of indicators to ignore
-blacklist-0 = num lock
-blacklist-1 = scroll lock
+; Time in milliseconds that the input handler will wait between processing events
+;throttle-input-for = 30
 
-format =   <label-layout> <label-indicator>
-format-spacing = 0
+; Reload upon receiving XCB_RANDR_SCREEN_CHANGE_NOTIFY events
+screenchange-reload = false
 
-label-layout = %layout%
-label-indicator-on = %name%
+; Compositing operators
+; @see: https://www.cairographics.org/manual/cairo-cairo-t.html#cairo-operator-t
+compositing-background = source
+compositing-foreground = over
+compositing-overline = over
+compositing-underline = over
+compositing-border = over
 
-[module/pkg]
-type = custom/script
-exec = $HOME/.config/polybar/scripts/updates.sh
-;exec-if = "ping -q -w 2 -c 1 176.34.135.167 > /dev/null"
-;label = %{A1:termite -e "aurman -Syyu" & disown:} %{A3:termite -e "aurman -Syyu" & disown:}%output%%{A} %{A}
-tail = true
+; Define fallback values used by all module formats
+;format-foreground = 
+;format-background = 
+;format-underline =
+;format-overline =
+;format-spacing =
+;format-padding =
+;format-margin =
+;format-offset =
 
-[module/redshift]
-type = custom/script
-exec = ~/bin/toggle --redshift
-tail = true
+; Enables pseudo-transparency for the bar
+; If set to true the bar can be transparent without a compositor.
+pseudo-transparency = false
 
-click-left = ~/bin/toggle --redshift -t
-
-[module/volume]
-type = internal/alsa
-;speaker-mixer = Speaker
-;headphone-mixer = Headphone
-;headphone-id = 16
-;mapped = true
-format-volume = <ramp-volume> <label-volume>
-label-volume = %percentage%%
-label-muted = 婢 MUTE
-
-ramp-volume-0 = 奄
-ramp-volume-1 = 奔
-ramp-volume-2 = 墳
-
-ramp-headphones-0 = 
-ramp-headphones-1 = 
-
-[module/network]
-type = custom/script
-exec = $HOME/.config/polybar/scripts/check-network
-click-left = networkmanager_dmenu &
-click-right = networkmanager_dmenu &
-tail = true
-
-[module/date]
-type = internal/date
-interval = 30
-label =  %time%
-time = %H:%M
-time-alt = %Y-%m-%d
-
-[module/powermenu]
-type = custom/text
-content = 襤
-content-padding = 2
-content-background = ${color.acolor}
-content-foreground = ${color.fg}
-click-left = $HOME/.config/polybar/scripts/sysmenu
-click-right = $HOME/.config/polybar/scripts/sysmenu
-
-;== EOF ========================================================
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
