refactor(tmux): remove copycat plugin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -167,11 +167,11 @@ set -g @copy_use_osc52_fallback on
 # Prefer vi style key table
 setw -g mode-keys vi
 
-bind p paste-buffer
-bind C-p choose-buffer
+bind-key Escape copy-mode
+bind-key p paste-buffer
+bind-key P choose-buffer
 
 # trigger copy mode by
-bind -n M-Up copy-mode
 
 # Scroll up/down by 1 line, half screen, whole screen
 bind -T copy-mode-vi M-Up              send-keys -X scroll-up
@@ -184,6 +184,14 @@ bind -T copy-mode-vi PageUp            send-keys -X page-up
 # When scrolling with mouse wheel, reduce number of scrolled rows per tick to "2" (default is 5)
 bind -T copy-mode-vi WheelUpPane       select-pane \; send-keys -X -N 2 scroll-up
 bind -T copy-mode-vi WheelDownPane     select-pane \; send-keys -X -N 2 scroll-down
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi h send-keys -X tree-collapse
+bind-key -T copy-mode-vi l send-keys -X tree-expand
+bind-key -T copy-mode-vi H send-keys -X tree-collapse-all
+bind-key -T copy-mode-vi L send-keys -X tree-expand-all
 
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
@@ -330,12 +338,11 @@ bind -T off F12 \
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
-set -g @open-S 'https://www.google.com/search?q='
+set -g @open-S 'https://duckduckgo.com/?q='
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=colour2]● #[default]"
