feat(polybar): use label discharging for batery metrics

--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -171,8 +171,8 @@ format-charging-padding = 2
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-format-discharging = <animation-discharging>
-; format-discharging-prefix = " "
+format-discharging = <label-discharging>
+#format-discharging-prefix = " "
 format-discharging-background = ${color.background-alt}
 format-discharging-foreground = ${color.foreground}
 format-discharging-overline = ${color.background}
