feat(Polybar): add edp1 monitor

--- a/polybar/.config/polybar/edp1.ini
+++ b/polybar/.config/polybar/edp1.ini
@@ -6,7 +6,7 @@
 monitor = eDP-1
 
 ; Use the specified monitor as a fallback if the main one is not found.
-monitor-fallback =
+monitor-fallback = eDP-1-1
 
 ; Require the monitor to be in connected state
 ; XRandR sometimes reports my monitor as being disconnected (when in use)
