feat(music, spotify): update config file

--- a/music/.config/spotifyd/spotifyd.conf
+++ b/music/.config/spotifyd/spotifyd.conf
@@ -10,6 +10,20 @@ username = "solay007-SV"
 # can't be used simultaneously.
 password_cmd = "pass show spotify.com/solay | head -n 1"
 
+# If set to true, `spotifyd` tries to bind to dbus (default is the session bus)
+# and expose MPRIS controls. When running headless, without the session bus,
+# you should set this to false, to avoid errors. If you still want to use MPRIS,
+# have a look at the `dbus_type` option.
+use_mpris = true
+
+# The bus to bind to with the MPRIS interface.
+# Possible values: "session", "system"
+# The system bus can be used if no graphical session is available
+# (e.g. on headless systems) but you still want to be able to use MPRIS.
+# NOTE: You might need to add appropriate policies to allow spotifyd to
+# own the name.
+dbus_type = "session"
+
 # The audio backend used to play the your music. To get
 # a list of possible backends, run `spotifyd --help`.
 backend = "pulseaudio"
@@ -48,11 +62,21 @@ bitrate = 320
 # shell placeholders like $HOME or ~ don't work!
 cache_path = "/home/ernest/.cache/spotifyd"
 
+# The maximal size of the cache directory in bytes
+# The example value corresponds to ~ 1GB
+max_cache_size = 1000000000
+
 # If set to true, audio data does NOT get cached.
 #no_audio_cache = false
 
 # If set to true, enables volume normalisation between songs.
 volume_normalisation = true
+
+# The normalisation pregain that is applied for each song.
+normalisation_pregain = -10
+
+# After the music playback has ended, start playing similar songs based on the previous tracks.
+autoplay = true
 
 # The normalisation pregain that is applied for each song.
 #normalisation_pregain = -10
