feat(polybar): update to use nerd font 3

--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -64,7 +64,8 @@ format-volume-padding = 2
 ;   <ramp-volume>
 ;   <bar-volume>
 format-muted = <label-muted>
-format-muted-prefix = 婢
+format-muted-prefix = 󰝟
+format-muted-prefix-font = 3
 format-muted-background = ${color.background-alt}
 format-muted-foreground = ${color.foreground}
 format-muted-overline = ${color.background}
@@ -82,8 +83,11 @@ label-muted-foreground = ${color.red}
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 
+ramp-volume-0-font = 3
 ramp-volume-1 = 
+ramp-volume-1-font = 3
 ramp-volume-2 = 
+ramp-volume-2-font = 3
 
 ; If defined, it will replace <ramp-volume> when
 ; headphones are plugged in to `headphone_control_numid`
@@ -205,33 +209,43 @@ label-discharging = %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default)
-label-full = 
-
+label-full = 󰁹
+label-full-font = 3
 ; Only applies if <ramp-capacity> is used
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-0 = 󰁺
+ramp-capacity-0-font = 3
+ramp-capacity-1 = 󰁼
+ramp-capacity-1-font = 3
+ramp-capacity-2 = 󰁾
+ramp-capacity-2-font = 3
+ramp-capacity-3 = 󰂀
+ramp-capacity-3-font = 3
+ramp-capacity-4 = 󰁹
+ramp-capacity-4-font = 3
 
 ; Only applies if <bar-capacity> is used
 bar-capacity-width = 10
 
 ; Only applies if <animation-charging> is used
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 = 󰢜
+animation-charging-0-font = 3
+animation-charging-1 = 󰂇
+animation-charging-1-font = 3
+animation-charging-2 = 󰢝
+animation-charging-2-font = 3
+animation-charging-3 = 󰢞
+animation-charging-3-font = 3
+animation-charging-4 = 󰂅
+animation-charging-4-font = 3
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
 ; Only applies if <animation-discharging> is used
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-3 = 
-animation-discharging-4 = 
+animation-discharging-0 = 󰁹
+animation-discharging-1 = 󰂀
+animation-discharging-2 = 󰁾
+animation-discharging-3 = 󰁼
+animation-discharging-4 = 󰁺
 ; Framerate in milliseconds
 animation-discharging-framerate = 500
 
@@ -374,7 +388,8 @@ interval = 1
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = 
+format-prefix = 
+format-prefix-font = 2
 format-background = ${color.background-alt}
 format-foreground = ${color.foreground}
 format-overline = ${color.background}
@@ -409,12 +424,12 @@ interval = 60
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = " %H:%M"
+time = " %H:%M"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
-time-alt = " %a, %d %b %Y"
+time-alt = " %a, %d %b %Y"
 
 ; Available tags:
 ;   <label> (default)
@@ -655,7 +670,8 @@ interval = 1
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = 
+format-prefix = 󰍛
+format-prefix-font = 2
 format-background = ${color.background-alt}
 format-foreground = ${color.foreground}
 format-overline = ${color.background}
@@ -798,6 +814,7 @@ format-foreground = ${color.foreground}
 format-overline = ${color.background}
 format-underline = ${color.background}
 format-padding = 2
+format-font = 4
 
 exec = $HOME/.config/polybar/scripts/check-network
 click-left = networkmanager_dmenu &
@@ -1049,7 +1066,8 @@ blacklist-1 = scroll lock
 ;   <label-layout> (default)
 ;   <label-indicator> (default)
 format = <label-layout><label-indicator>
-format-prefix = 
+format-prefix = 󰌌
+format-prefix-font = 3
 format-background = ${color.background-alt}
 format-foreground = ${color.foreground}
 format-overline = ${color.background}
@@ -1114,18 +1132,17 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 0;
+icon-0 = 0;󱂛
 icon-1 = 1;
-icon-2 = 2;
+icon-2 = 2;
 icon-3 = 3;
-icon-4 = 4;
+icon-4 = 4;
 icon-5 = 5;
-icon-6 = 6;
-icon-7 = 7;
-icon-8 = 8;
+icon-6 = 6;󰈙
+icon-7 = 7;
+icon-8 = 8;
 icon-9 = 9;
 icon-default = 
-
 
 ; Available tags:
 ;   <label-monitor>
@@ -1149,6 +1166,7 @@ label-monitor = %name%
 ;   %index%
 ; Default: %icon%  %name%
 label-active = %icon%
+label-active-font = 2
 label-active-foreground = ${color.primary}
 
 ; Available tokens:
@@ -1157,6 +1175,7 @@ label-active-foreground = ${color.primary}
 ;   %index%
 ; Default: %icon%  %name%
 label-occupied = %icon%
+label-occupied-font = 2
 label-occupied-foreground = ${color.yellow}
 
 ; Available tokens:
@@ -1165,6 +1184,7 @@ label-occupied-foreground = ${color.yellow}
 ;   %index%
 ; Default: %icon%  %name%
 label-urgent = %icon%
+label-urgent-font = 2
 label-urgent-foreground = ${color.red}
 
 ; Available tokens:
@@ -1173,6 +1193,7 @@ label-urgent-foreground = ${color.red}
 ;   %index%
 ; Default: %icon%  %name%
 label-empty = %icon%
+label-empty-font = 2
 
 label-active-padding = 1
 label-urgent-padding = 1
