--- a/polybar/.config/polybar/user_modules.ini
+++ b/polybar/.config/polybar/user_modules.ini
@@ -32,7 +32,8 @@ interval = 5
 ;   <output> - deprecated
 ;   <label> (default)
 format = <label>
-format-prefix = 
+format-prefix = 󰏔
+format-prefix-font = 3
 format-background = ${color.background-alt}
 format-foreground = ${color.foreground}
 format-overline = ${color.background}
