--- a/polybar/.config/polybar/edp1.ini
+++ b/polybar/.config/polybar/edp1.ini
@@ -96,8 +96,10 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=12;4"
-font-1 = "Hack:size=10;3"
+font-0 = "Iosevka Nerd Font Mono:style=Regular:size=12;3"
+font-1 = "Hack Nerd Font Mono:style=Regular:size=15;3"
+font-2 = "NotoSerif Nerd Font:size=14;3:style=Regular"
+font-3 = "NotoSerif Nerd Font:size=12;3:style=Regular"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
