feat(polybar): update desktop icons

--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -1139,8 +1139,8 @@ icon-3 = 3;
 icon-4 = 4;
 icon-5 = 5;
 icon-6 = 6;󰈙
-icon-7 = 7;
-icon-8 = 8;
+icon-7 = 7;
+icon-8 = 8;󰈮
 icon-9 = 9;
 icon-default = 
 
